force-app/main/default/objects/BankAccountVisibility__c/BankAccountVisibility__c.object-meta.xml
<CustomObject>
    <description>Objet de liaison entre les comptes bancaires et les entités</description>
    <label>Visibilité compte bancaire</label>
    <nameField>
        <displayFormat>BAV/{0000000}</displayFormat>
        <label>Numéro</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Visibilités compte bancaire</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>