force-app/main/default/objects/BankAccountVisibility__c/fields/bankAccount__c.field-meta.xml
<CustomField>
    <fullName>bankAccount__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Compte bancaire</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Referencial__c.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>BankAccount</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Referencial__c</referenceTo>
    <relationshipLabel>Visibilités compte bancaire</relationshipLabel>
    <relationshipName>BankAccountVisibilities</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>