force-app/main/default/objects/BankAccountVisibility__c/fields/defaultBankAccount__c.field-meta.xml
<CustomField>
    <fullName>defaultBankAccount__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Compte bancaire par défaut</label>
    <type>Checkbox</type>
</CustomField>