force-app/main/default/objects/BankAccountVisibility__c/fields/endDate__c.field-meta.xml
<CustomField>
    <fullName>endDate__c</fullName>
    <label>Fin</label>
    <type>Date</type>
</CustomField>