force-app/main/default/objects/BankAccountVisibility__c/validationRules/VR_K3_BAV_EndDate.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_K3_BAV_EndDate</fullName>
    <active>true</active>
    <description>La date de fin invalide (doit être supérieure ou égale à la date de début)</description>
    <errorConditionFormula>$User.ByPassValidationRule__c = false &amp;&amp;
endDate__c &lt; startDate__c</errorConditionFormula>
    <errorDisplayField>endDate__c</errorDisplayField>
    <errorMessage>La date de fin invalide (doit être supérieure ou égale à la date de début)!</errorMessage>
</ValidationRule>