force-app/main/default/objects/BankAccountVisibility__c/listViews/Tout.listView-meta.xml
<ListView>
    <fullName>Tout</fullName>
    <columns>NAME</columns>
    <columns>entity__c</columns>
    <columns>bankAccount__c</columns>
    <columns>active__c</columns>
    <columns>startDate__c</columns>
    <columns>endDate__c</columns>
    <columns>defaultBankAccount__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>Tout</label>
    <language>fr</language>
</ListView>